--- a/app/views/ui-components/bs4/v1/forms/broker/_agency_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_agency_information.html.erb
@@ -1,18 +1,16 @@
-<h4 class="mb-2"><%= l10n('broker_agency_note') %></h4>
-
 <div class="row mb-3">
   <%= f.hidden_field :entity_kind, value: "s_corporation" %>
-  
+
   <div class="col-md-6">
-    <label for="inputLegalName" class='required'><%= l10n('legal_name') %></label>
-    <%= f.text_field :legal_name, placeholder: l10n('legal_name_placeholder'), required: true, id: 'validationCustomLegalName', class: 'form-control' %>
+    <%= f.label :legal_name, l10n("legal_name"), class: "required" %>
+    <%= f.text_field :legal_name, placeholder: l10n('legal_name_placeholder'), required: true, class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n('legal_name_error') %>
     </div>
   </div>
 
   <div class="col-md-6">
-    <label for="inputDBA"><%= l10n('dba_caps') %></label>
-    <%= f.text_field :dba, placeholder: l10n('doing_business_as'), id: 'validationCustomdba', class: 'form-control' %>
+    <%= f.label :dba, l10n('dba_caps') %>
+    <%= f.text_field :dba, placeholder: l10n('doing_business_as'), class: 'form-control' %>
   </div>
 </div>
