--- a/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
@@ -28,8 +28,8 @@
   </div>
 
   <div class="col-md-3 mb-3">
-    <label for="inputDOB"  class="required"><%= l10n('broker_agencies.dob') %></label>
-    <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max: 16.years.ago.beginning_of_month, required: true, onblur: 'validDob(this)' %>
+    <%= f.label :dob, l10n("broker_agencies.dob"), class: "required" %>
+    <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max: 16.years.ago, required: true, onblur: 'validDob(this)' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
     </div>
@@ -37,14 +37,14 @@
 
   <div class="col-md-3 mb-3">
     <label for="inputNPN"  class="required"><%= l10n('npn') %></label>
-    <%= f.text_field :npn, 
+    <%= f.text_field :npn,
       placeholder: l10n('npn_placeholder'),
-      required: %w[new create].include?(controller.action_name) ? 'true' : !EnrollRegistry.feature_enabled?(:allow_alphanumeric_npn), 
-      id: 'inputNPN', 
-      class: 'form-control', 
+      required: %w[new create].include?(controller.action_name) ? 'true' : !EnrollRegistry.feature_enabled?(:allow_alphanumeric_npn),
+      id: 'inputNPN',
+      class: 'form-control',
       maxlength: '10',
       onkeypress: EnrollRegistry.feature_enabled?(:allow_alphanumeric_npn) ? 'return isAlphaNumeric(event);' : 'return isNumberKey(event);',
-      disabled: npn_disabled 
+      disabled: npn_disabled
     %>
     <div class="invalid-feedback">
       <%= l10n('npn_error') %>
