--- a/app/views/insured/plan_shoppings/_plan_details.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_details.html.erb
@@ -155,7 +155,31 @@
 
     </div>
   </div>
-
+  <div class="modal" id="planComparisonCountExceeded" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="container pt-2 pb-4 modal-content">
+        <div class="modal-header d-flex mb-4 align-items-center border-0">
+          <div class="col-auto px-0">
+            <div class="error-icon icon icon-sm" alt="error" aria-hidden="true">&nbsp;</div>
+          </div>
+          <div class="col pl-0 bold">
+            <%= l10n("plans.comparison_exceeded_modal.title") %>
+          </div>
+          <div class="col-auto px-0">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <div class="close-icon icon-sm align-self-start m-0" aria-hidden="true">&nbsp;</div>
+            </button>
+          </div>
+        </div>
+        <div class="modal-body border-0">
+          <%= l10n("plans.comparison_exceeded_modal.number_exceeded") %>
+        </div>
+        <div class="d-flex align-items-center mt-4 justify-content-end">
+          <button type="button" class="btn-primary mr-2" data-dismiss="modal"> <%= l10n("close") %> </button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -321,11 +345,15 @@
 
 				if (count > 3) {
 					checkbox.checked = false;
-					swal({
+          if (document.getElementById('planComparisonCountExceeded')) {
+            $('#planComparisonCountExceeded').modal('show');
+          } else {
+            swal({
 						title: "Plan count exceeded",
 						text: "You may only compare up to 3 plans at a time",
 						icon: "warning"
-					});
+					  });
+          }
 				}
 				if (count <= 3) {
           plansToCompareArray.push(hios)
