--- a/app/views/insured/families/_qle_detail_for_existing_sep.erb
+++ b/app/views/insured/families/_qle_detail_for_existing_sep.erb
@@ -1,21 +1,23 @@
 <%qle = find_qle_for_sep(@active_sep)%>
 <% if @bs4 %>
-  <div id="qle-details-for-existing-sep hbx-enrollment-panel" class="hidden">
-    <h2><%= l10n("insured.eligible_to_enroll").to_s.upcase %></h2>
-    <%= form_tag insured_family_members_path, method: :get, class: 'qle-detail-for-existing', id: 'qle_form' do %>
+  <div id="qle-details-for-existing-sep" class="hbx-enrollment-panel home-widget p-2 my-4 hidden">
+    <h2><%= l10n("insured.eligible_to_enroll").titleize %></h2>
+    <%= form_tag insured_family_members_path, method: :get, class: 'qle-detail-for-existing', id: 'qle_form', class: 'pr-2 pl-2 pb-2' do %>
       <%= hidden_field_tag 'change_plan', qle.title %>
       <%= hidden_field_tag 'qle_id', qle.id %>
       <%= hidden_field_tag 'sep_id', @active_sep.id %>
       <%= hidden_field_tag 'employee_role_id', @employee_role.try(:id) || @employee_role_id || "None" %>
-      <h3><%= l10n("insured.choose_the_date_you_want_your_plan_start") %></h3>
       <div class="alert alert-danger hidden" id='qle_effective_on_kind_alert' role="alert"><%= l10n('please_select_effective_date') %></div> <%# TODO: test this alert %>
       <div>
         <% if qle.date_options_available? && @active_sep.optional_effective_on.present? %>
-          <%= select_tag 'effective_on_option', options_for_select(@active_sep.optional_effective_on), include_blank: l10n("select_effective_date") %>
+          <label class="required weight-n" for="effective_on_option"><%= l10n("insured.choose_the_date_you_want_your_plan_start") %></label>
+          <%= select_tag 'effective_on_option', options_for_select(@active_sep.optional_effective_on), include_blank: l10n("select_effective_date"), required: true, class: "col-3" %>
         <% else %>
           <%= hidden_field_tag 'effective_on_option', @active_sep.next_poss_effective_date %>
         <% end %>
-        <%= submit_tag l10n('continue'), class: 'btn btn-primary' %>
+        <div class="mt-4">
+          <%= submit_tag l10n('continue_next'), class: 'btn btn-primary' %>
+        </div>
       </div>
     <% end %>
   </div>
