--- a/app/views/insured/families/_qle_detail_for_existing_sep.erb
+++ b/app/views/insured/families/_qle_detail_for_existing_sep.erb
@@ -1,42 +1,63 @@
 <%qle = find_qle_for_sep(@active_sep)%>
-<div id="qle-details-for-existing-sep" class='module hidden'>
-  <div class="hbx-enrollment-panel panel panel-default">
-    <div class="panel-heading">
-      <div class="vertically-aligned-row">
-        <h3 class="no-buffer"><%= l10n("insured.eligible_to_enroll").to_s.upcase %></h3>
-        <div class="text-right">
-          <a class="close-popup" href="javascript:void(0);">
-            <i aria-hidden="true" class="fas fa-times"></i>
-          </a>
+<% if @bs4 %>
+  <div id="qle-details-for-existing-sep" class="hbx-enrollment-panel home-widget p-2 my-4 hidden">
+    <h2><%= l10n("insured.eligible_to_enroll").titleize %></h2>
+    <%= form_tag insured_family_members_path, method: :get, class: 'qle-detail-for-existing', id: 'qle_form', class: 'pr-2 pl-2 pb-2' do %>
+      <%= hidden_field_tag 'change_plan', qle.title %>
+      <%= hidden_field_tag 'qle_id', qle.id %>
+      <%= hidden_field_tag 'sep_id', @active_sep.id %>
+      <%= hidden_field_tag 'employee_role_id', @employee_role.try(:id) || @employee_role_id || "None" %>
+      <% if qle.date_options_available? && @active_sep.optional_effective_on.present? %>
+        <label class="required weight-n" for="effective_on_option"><%= l10n("insured.choose_the_date_you_want_your_plan_start") %></label>
+        <%= select_tag 'effective_on_option', options_for_select(@active_sep.optional_effective_on), include_blank: l10n("select_effective_date"), required: true, class: "col-3" %>
+      <% else %>
+        <%= hidden_field_tag 'effective_on_option', @active_sep.next_poss_effective_date %>
+      <% end %>
+      <div class="mt-4">
+        <%= submit_tag l10n('continue_next'), id: 'existing-submit', class: 'btn btn-primary', onkeydown: "handleButtonKeyDown(event, 'existing-submit');" %>
+      </div>
+    <% end %>
+  </div>
+<% else %>
+  <div id="qle-details-for-existing-sep" class='module hidden'>
+    <div class="hbx-enrollment-panel panel panel-default">
+      <div class="panel-heading">
+        <div class="vertically-aligned-row">
+          <h3 class="no-buffer"><%= l10n("insured.eligible_to_enroll").to_s.upcase %></h3>
+          <div class="text-right">
+            <a class="close-popup" href="javascript:void(0);">
+              <i aria-hidden="true" class="fas fa-times"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+        <% url, http_method = '/insured/family_members', :get %>
+          <%= form_tag url, method: http_method, class: 'input-no-pd qle-detail-for-existing', id: 'qle_form' do %>
+            <%= hidden_field_tag 'change_plan', qle.title %>
+            <%= hidden_field_tag 'qle_id', qle.id %>
+            <%= hidden_field_tag 'sep_id', @active_sep.id %>
+            <%= hidden_field_tag 'employee_role_id', @employee_role.try(:id) || @employee_role_id || "None" %>
+            <p class=" darkblue text-center">
+              <strong id="qle-input-info"><%= l10n("insured.choose_the_date_you_want_your_plan_start") %></strong><br>
+            </p>
+            <div class="alert alert-danger hidden" id='qle_effective_on_kind_alert' role="alert">Please Select Effective Date</div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <% if qle.date_options_available? && @active_sep.optional_effective_on.present?%> <!--Show Dropdown if there are choice Dates available.-->
+                <div class="alert alert-danger" id='qle_effective_on_kind_alert' role="alert" style='display:none'>Please Select Effective Date</div>
+                <div style='margin: 0 auto;max-width:250px;'>
+                    <%= select_tag 'effective_on_option', options_for_select(@active_sep.optional_effective_on), include_blank: l10n(".select_effective_date").to_s.upcase+' *' %>
+                </div>
+              <% else %>  <!--Go with the Next possible effective date.-->
+                <%= hidden_field_tag 'effective_on_option', @active_sep.next_poss_effective_date %>
+              <% end %>
+              <br />
+              <div align="center"> <%= submit_tag l10n('.continue'), class: 'btn btn-primary' %> </div>
+            </div>
+          <% end %> <!--End Form tag-->
         </div>
       </div>
     </div>
-    <div class="panel-body">
-      <div class="row">
-      <% url, http_method = '/insured/family_members', :get %>
-        <%= form_tag url, method: http_method, class: 'input-no-pd qle-detail-for-existing', id: 'qle_form' do %>
-          <%= hidden_field_tag 'change_plan', qle.title %>
-          <%= hidden_field_tag 'qle_id', qle.id %>
-          <%= hidden_field_tag 'sep_id', @active_sep.id %>
-          <%= hidden_field_tag 'employee_role_id', @employee_role.try(:id) || @employee_role_id || "None" %>
-          <p class=" darkblue text-center">
-            <strong id="qle-input-info"><%= l10n("insured.choose_the_date_you_want_your_plan_start") %></strong><br>
-          </p>
-          <div class="alert alert-danger hidden" id='qle_effective_on_kind_alert' role="alert">Please Select Effective Date</div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <% if qle.date_options_available? && @active_sep.optional_effective_on.present?%> <!--Show Dropdown if there are choice Dates available.-->
-              <div class="alert alert-danger" id='qle_effective_on_kind_alert' role="alert" style='display:none'>Please Select Effective Date</div>
-              <div style='margin: 0 auto;max-width:250px;'>
-                  <%= select_tag 'effective_on_option', options_for_select(@active_sep.optional_effective_on), include_blank: l10n(".select_effective_date").to_s.upcase+' *' %>
-              </div>
-            <% else %>  <!--Go with the Next possible effective date.-->
-              <%= hidden_field_tag 'effective_on_option', @active_sep.next_poss_effective_date %>
-            <% end %>
-            <br />
-            <div align="center"> <%= submit_tag l10n('.continue'), class: 'btn btn-primary' %> </div>
-          </div>
-        <% end %> <!--End Form tag-->
-      </div>
-    </div>
   </div>
-</div>
+<% end %>
