use btn class for existing sep link, remove modal fade backdrop on modal close

--- a/app/assets/javascripts/qle.js.erb
+++ b/app/assets/javascripts/qle.js.erb
@@ -161,6 +161,7 @@ $(function () {
 
   $(document).on('click', 'a.existing-sep-item', function() {
     $('#choose_flow').modal('hide');
+    $('.modal-backdrop').remove();
     //window.scrollTo(0, 0);
     $('html,body').animate({scrollTop: 0});
     init_qle_message();
