readd create broker registration and translations (#4433)
readd create broker registration button text and translations

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_registration_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_registration_form.html.erb
@@ -30,7 +30,7 @@
       <% if registration_recaptcha_enabled?(@profile_type) %>
         <%= recaptcha_tags %>
       <% end %>
-      <%= f.submit l10n('new_broker_agency_form.create_broker_agency'), class: 'btn btn-primary', id: 'broker-btn', disabled: EnrollRegistry.feature_enabled?(:broker_attestation_fields) %>
+      <%= f.submit l10n('broker_agencies.broker_roles.new_broker_agency_form.create_broker_agency'), class: 'btn btn-primary', id: 'broker-btn', disabled: EnrollRegistry.feature_enabled?(:broker_attestation_fields) %>
     <% end %>
   </div>
 
