adjust copy when no messages

--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
@@ -62,7 +62,7 @@
     <div class="rounded-end bg-white mb-4 tab-container">
       <section>
         <div class="pl-2 pr-2 pt-3">
-          <p><%= l10n("zero_deleted_messages").gsub("deleted", @folder.downcase) %></p>
+          <p><%= l10n("no_messages") %></p>
         </div>
       </section>
     </div>
