--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_agency_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_agency_form.html.erb
@@ -39,7 +39,7 @@
     </div>
   </div>
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
+    $(document).on('turbolinks:load', function () {
       var checkboxes = document.getElementById("brokerLanguageOptions").getElementsByTagName("input")
       var button = document.getElementById("brokerFormSubmit")
 
