--- a/app/views/ui-components/bs4/v1/forms/broker/contact_information/_contact_info_fields.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/contact_information/_contact_info_fields.html.erb
@@ -15,7 +15,7 @@
     <% end %>
   </div>
 
-  <a class="btn btn-default btn-secondary mb-4" tabindex="0" type="button" data-action="click->office-locations#addLocation"><%= l10n("add_office_location") %></a>
+  <a class="btn btn-default btn-secondary mb-4" id="add-location" tabindex="0" type="button" onkeydown="handleButtonKeyDown(event, 'add-location')" data-action="click->office-locations#addLocation"><%= l10n("add_office_location") %></a>
 </div>
 
 <script>
