--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/family_datatable.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/family_datatable.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'benefit_sponsors/shared/profiles/broker_agency/menu', :locals => { broker_profile_id: @broker_agency_profile.id, :active_tab => "families-tab", families: true } %>
+<%= render partial: 'benefit_sponsors/shared/profiles/broker_agency/menu', :locals => { broker_profile_id: @broker_agency_profile.id, :active_tab => "families-tab" } %>
 <div class="profile-content">
   <div class="tab-row">
     <div class="tab-content" id="myTabContent">
