--- a/components/benefit_sponsors/app/views/layouts/bs4_application.html.erb
+++ b/components/benefit_sponsors/app/views/layouts/bs4_application.html.erb
@@ -1,5 +1,6 @@
 <% if @bs4 %>
   <% content_for :head do %>
+    <%= javascript_pack_tag 'benefit_sponsors', 'data-turbolinks-track': 'reload' %>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <% end %>
 
