remove link for clarification

--- a/app/javascript/css/colors.scss
+++ b/app/javascript/css/colors.scss
@@ -135,6 +135,7 @@
   --badge-standard-border: hsla(317, 33%, 38%, 1);
 
   --tab-active-border: #A2B289;
+  --nav-dropdown-drop-shadow: hsla(0, 0%, 0%, 0.13);
 }
 
 [data-theme='dc'] {
@@ -176,6 +177,7 @@
   --button-error-active-color: #671314;
 
   --tab-active-border: #A2B289;
+  --nav-dropdown-drop-shadow: hsla(0, 0%, 0%, 0.13);
 }
 
 [data-contrast='true'] {
