--- a/app/views/ui-components/bs4/v1/navs/_header.html.erb
+++ b/app/views/ui-components/bs4/v1/navs/_header.html.erb
@@ -50,7 +50,11 @@
                 <div class="bold m-0 p-0"><%= user_first_name_last_name_and_suffix %></div>
                 <div class="horizontal-links">
                   <% unless user_id.blank? %><span><%= l10n("id").upcase %>: <%= user_id %></span><% end %>
-                  <% if my_portal_link(controller).present? %><span><%= my_portal_link(controller) %></span><% end %>
+                  <% if my_portal_link(controller).present? %>
+                    <span class='position-relative'><%= my_portal_link(controller) %></span>
+                  <% else %>
+                    <%= render partial: "shared/my_portal_links" %>
+                  <% end %>
                   <span><%= h(link_to l10n('layout.header.logout'), main_app.destroy_user_session_path, method: 'delete') %></span>
                 </div>
               </div>
@@ -89,7 +93,11 @@
           </span>
         </li>
       <% end %>
-      <li><% if signed_in? %><%= render partial: "shared/my_portal_links" %><% end %></li>
+      <li>
+        <% if signed_in? %>
+          <%= render partial: "shared/my_portal_links" %>
+        <% end %>
+      </li>
       <li class="nav-item my-2"><%= h(link_to l10n('layout.header.help'), EnrollRegistry[:enroll_app].setting(:help_url).item, target: '_blank', rel: "noopener noreferrer") %></li>
     </ul>
 
