remove floatlabel class

--- a/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
@@ -9,7 +9,7 @@
 
   <div class="col-md-6">
     <%= f.label :home_page, l10n("website") %>
-    <%= f.text_field :home_page, class: "floatlabel form-control interaction-field-control-broker-home-page", placeholder: l10n("website_url") %>
+    <%= f.text_field :home_page, class: "form-control interaction-field-control-broker-home-page", placeholder: l10n("website_url") %>
   </div>
 </div>
 
